[gd_scene load_steps=3 format=3 uid="uid://bvxqy8n7h2r3p"]

[ext_resource type="Script" path="res://scripts/StartScreen.gd" id="1"]

[sub_resource type="Theme" id="Theme_1"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_hover_color = Color(0.9, 0.9, 0.9, 1)
Button/colors/font_pressed_color = Color(0.7, 0.7, 0.7, 1)
Button/constants/h_separation = 10
Button/constants/v_separation = 5
Button/fonts/font = null
Button/styles/hover = SubResource("StyleBoxFlat_1")
Button/styles/normal = SubResource("StyleBoxFlat_2")
Button/styles/pressed = SubResource("StyleBoxFlat_3")
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0.5)
Label/constants/shadow_offset_x = 2
Label/constants/shadow_offset_y = 2
Label/fonts/font = null

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.6, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.15, 0.4, 0.8, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.1, 0.3, 0.6, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.05, 0.02, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "üèÉ Temple Run"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
modulate = Color(1, 1, 1, 0.5)

[node name="InstructionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "How to Play:
‚¨ÖÔ∏è‚û°Ô∏è Arrow Keys - Switch Lanes
‚¨ÜÔ∏è Up Arrow - Jump
‚¨áÔ∏è Down Arrow - Slide
ESC - Pause

Collect coins and gems!
Avoid obstacles!
Run as far as you can!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
modulate = Color(1, 1, 1, 0.5)

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "High Score: 0"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
modulate = Color(1, 1, 1, 0.5)

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1")
text = "Start Game"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1")
text = "Close"